# health_app

./: .gitignore  BRANDING_GUIDE.md  PLANNING.md  README.md  TASK.md  TECH_STACK.md
backend/: .dockerignore  Dockerfile  app.py  auth.py  db.py  gesundwerk.db  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh
backend/tests/: test_recommendations.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: i18n.ts  main.tsx  styles.css  theme.ts
frontend/src/components/: ActivityCard.tsx  AiAssistant.tsx  BreathingOverlay.tsx  CircularProgress.tsx  CommandPalette.tsx  DailyGoalsCard.tsx  EmojiPicker.tsx  OverallProgress.tsx  PomodoroTimer.tsx  QuickActionBar.tsx  ReminderDialog.tsx  icons.tsx  ui.tsx
frontend/src/lib/: achievements.ts  analytics.ts  config.ts  crypto.ts  date.ts  idb.ts  sensing.ts  storage.ts
frontend/src/routes/: AchievementsView.tsx  App.tsx  Assistant.tsx  Auth.tsx  Dashboard.tsx  HistoryView.tsx  JournalView.tsx  KnowledgeHub.tsx  Profile.tsx  SettingsView.tsx  WeeklyReview.tsx
frontend/src/state/: auth.ts  cloud.ts  journal.ts  store.ts  types.ts
frontend/tests/: adaptive.test.ts  analytics.test.ts  app.test.tsx
